istio/istio-gateways.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateways
